--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 	<span class="blue">g</span>
 	<span class="green">l</span>
 	<span class="red">e</span>
-	<div class="blue">hello</div>
+	<div class="blue">hello world</div>
 </body>
 </html>
